Changed background color

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --cyan: hsl(179, 62%, 43%);
     --bright-yellow: hsl(71, 73%, 54%);
     --light-gray: hsl(204, 43%, 93%);
-    --grayish-blue: hsl(218, 22%, 90%);
+    --grayish-blue: hsl(220, 36%, 88%);
 }
 
 * {
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: var(--grayish-blue);
+    background-color: hsl(204, 43%, 93%);
     color: white;
     display: grid;
     font-family: 'Karla', sans-serif;
